fixed css misaligned items in booking modal

--- a/frontend/src/components/Booking/booking.css
+++ b/frontend/src/components/Booking/booking.css
@@ -52,4 +52,6 @@
     cursor: pointer;
   }
 
-  
+#endDate {
+    padding-right: 15px;
+}
